Index.html & .css
Added the basis for charts on main page. Checkbox used to show/hide graphs

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="js/main.js"></script>
 <script src="js/index.js"></script>
 
@@ -54,6 +55,23 @@
                 </div>
             </div>
 
+            <div class="chartCard">
+                <div class="chartBox">
+                    <p>Brand 1:<input onclick="showChart(this)" type="checkbox" data-chart-name="myChart"></p>
+                    <p>Brand 2:<input onclick="showChart(this)" type="checkbox" data-chart-name="myChart2"></p>
+                    <p>Brand 3:<input onclick="showChart(this)" type="checkbox" data-chart-name="myChart3"></p>
+                    <p>Brand 4:<input onclick="showChart(this)" type="checkbox" data-chart-name="myChart4"></p>
+                    <p>Brand 5:<input onclick="showChart(this)" type="checkbox" data-chart-name="myChart5"></p>
+                </div>
+              <div class="chartBox">
+                <canvas class="hide" id="myChart"></canvas>
+                <canvas class="hide" id="myChart2"></canvas>
+                <canvas class="hide" id="myChart3"></canvas>
+                <canvas class="hide" id="myChart4"></canvas>
+                <canvas class="hide" id="myChart5"></canvas>
+              </div>
+            </div>
+
         </div>
         <div id="indexCol_3">
             <!-- <div id="indexAccordion">
@@ -91,3 +109,128 @@
     </div>
 </footer>
 </html>
+
+<script>
+    // setup 
+const data = {
+    labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+    datasets: [{
+      label: 'Weekly Sales',
+      data: [18, 12, 6, 9, 12, 3, 9],
+      backgroundColor: [
+        'rgba(255, 26, 104, 0.2)',
+        'rgba(54, 162, 235, 0.2)',
+        'rgba(255, 206, 86, 0.2)',
+        'rgba(75, 192, 192, 0.2)',
+        'rgba(153, 102, 255, 0.2)',
+        'rgba(255, 159, 64, 0.2)',
+        'rgba(0, 0, 0, 0.2)'
+      ],
+      borderColor: [
+        'rgba(255, 26, 104, 1)',
+        'rgba(54, 162, 235, 1)',
+        'rgba(255, 206, 86, 1)',
+        'rgba(75, 192, 192, 1)',
+        'rgba(153, 102, 255, 1)',
+        'rgba(255, 159, 64, 1)',
+        'rgba(0, 0, 0, 1)'
+      ],
+      borderWidth: 1
+    }]
+  };
+
+  // config 
+  const config = {
+    type: 'bar',
+    data,
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  };
+
+  const config2 = {
+    type: 'bar',
+    data,
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  };
+
+  const config3 = {
+    type: 'bar',
+    data,
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  };
+
+  const config4 = {
+    type: 'bar',
+    data,
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  };
+
+  const config5 = {
+    type: 'bar',
+    data,
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  };
+
+  // render init block
+  const myChart = new Chart(
+    document.getElementById('myChart'),
+    config
+  );
+
+  const myChart2 = new Chart(
+    document.getElementById('myChart2'),
+    config2
+  );
+
+  const myChart3 = new Chart(
+    document.getElementById('myChart3'),
+    config3
+  );
+
+  const myChart4 = new Chart(
+    document.getElementById('myChart4'),
+    config4
+  );
+
+  const myChart5 = new Chart(
+    document.getElementById('myChart5'),
+    config5
+  );
+
+  function showChart(checkbox) {
+      console.log(checkbox.dataset.chartName);
+      const chartId = document.getElementById(checkbox.dataset.chartName);
+
+      chartId.classList.toggle('hide');
+      
+  }
+</script>
