--- a/templates/css/index.css
+++ b/templates/css/index.css
@@ -30,3 +30,31 @@
     background: #15202b;
     color: white;
 }
+
+.chartCard {
+    width: 500 px;
+    height: auto;
+    /**background: rgba(255, 26, 104, 0.2);*/
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+  }
+  .chartBox {
+    width: 400px;
+    padding: 20px;
+    border-radius: 20px;
+    border: solid 3px rgba(255, 26, 104, 1); 
+    background: white;
+    margin-bottom: 10px;
+    color: black;
+  }
+
+  .chartBox p {
+      text-align: center;
+      
+  }
+
+  .hide {
+      display: none !important;
+  }
