--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,6 @@
                         <li><img src="images/95968_W3.jpg" alt="" title="saw"></li>
                         <li><img src="images/STHT60083_1.jpg" alt="" title="screwdriver"></li>
                         
-                        
                     </ul>
                 </div>
             </div>
@@ -63,32 +62,18 @@
                     <p>Brand 4:<input onclick="showChart(this)" type="checkbox" data-chart-name="myChart4"></p>
                     <p>Brand 5:<input onclick="showChart(this)" type="checkbox" data-chart-name="myChart5"></p>
                 </div>
-              <div class="chartBox">
-                <canvas class="hide" id="myChart"></canvas>
-                <canvas class="hide" id="myChart2"></canvas>
-                <canvas class="hide" id="myChart3"></canvas>
-                <canvas class="hide" id="myChart4"></canvas>
-                <canvas class="hide" id="myChart5"></canvas>
-              </div>
-            </div>
 
-        </div>
-        <div id="indexCol_3">
-            <!-- <div id="indexAccordion">
-                <h3>header 1</h3>
-                <div>
-                    <p>
-                        content 1
-                    </p>
+                <div class="chartBox">
+                    <canvas class="hide" id="myChart"></canvas>
+                    <canvas class="hide" id="myChart2"></canvas>
+                    <canvas class="hide" id="myChart3"></canvas>
+                    <canvas class="hide" id="myChart4"></canvas>
+                    <canvas class="hide" id="myChart5"></canvas>
                 </div>
-                <h3>header 2</h3>
-                <div>
-                    <p>
-                        content 2
-                    </p>
-                </div>
-            </div> -->
+            </div>
         </div>
+        
+       
     </div>
 </div>
 
@@ -110,6 +95,7 @@
 </footer>
 </html>
 
+<!-- script for chartjs (show/hide feature wasn't working in js file) -->
 <script>
     // setup 
 const data = {
