--- a/templates/css/index.css
+++ b/templates/css/index.css
@@ -30,14 +30,17 @@
     background: #15202b;
     color: white;
 }
-
+div.slider {
+    width: 500px;
+    margin: 0 auto;
+}
 .chartCard {
     width: 500 px;
     height: auto;
     /**background: rgba(255, 26, 104, 0.2);*/
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: column;
   }
   .chartBox {
