--- a/templates/css/index.css
+++ b/templates/css/index.css
@@ -47,7 +47,7 @@ div.slider {
     width: 400px;
     padding: 20px;
     border-radius: 20px;
-    border: solid 3px rgba(255, 26, 104, 1); 
+    border: solid 3px rgb(255, 176, 29); 
     background: white;
     margin-bottom: 10px;
     color: black;
