--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,9 @@
             </div>
 
             <div class="chartCard">
+                
+                <p>Below you can select some of our popular tool brands and reveal how their most voted tools compare!</p><br>
+                
                 <div class="chartBox">
                     <p>Bosch:<input onclick="showChart(this)" type="checkbox" data-chart-name="myChart"></p>
                     <p>Stanley Black & Decker:<input onclick="showChart(this)" type="checkbox" data-chart-name="myChart2"></p>
