--- a/templates/css/aboutus.css
+++ b/templates/css/aboutus.css
@@ -1,7 +1,7 @@
 #pageContent {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
 }
 
 .contentCol {
